- Users can be sorted in ascending or descending order, by name, by status, by unread messages and by priority (default)
- A "new message notification" is shown also when a new file is received from a user
- Fixed a bug in emoticon parsing
- Hive protocol optimized
- Fixed a bug in opening url with diacritic characters in path
- Preset Messages
- Added option to read a "beegroups.ini" file (beta)

BeeBEEP 3.0.7
- ShareBox: new feature in beta (can share files like dropbox with all users connected)
- Added "Find text" and "Print" options in history (shortcut or right click)
- Fixed a bug in "Send offline messages"
- Added CopyMastro plugin support
- "Clear all read messages on closing chat window" option added
- "File notification on system tray" option added
- "StartMinimized" option added in beebeep.rc

BeeBEEP 3.0.6b
- Fixed "Stays on top" option in Linux and MacOSX

BeeBEEP 3.0.6
- Added "UseHostnameForDefaultUsername" option. It can be enabled in beebeep.rc
- Updated nickname update also the name of the chat window
- Fixed a bug that broke the link when there is an exclamation symbol in it
- Fixed a bug in showing chat window when tray message is clicked
- Users can not be removed from group by the other members but they can leave the group if they want to (due serverless)
- Windows UNC path are parsed and now it can be clickable
- "Open selected text as url" option added in chat chat window (right click on selected text)
- "Overwrite existing files" and "Ask me" option added
- Fixed a bug in icon of default chat when a new message is arrived
- Fixed a bug in alert beep when a new message is arrived
- Fixed a bug on stay on top (windows)
- Added "HideMainToolbar", "HideChatToolbar", "HideUsersPanel" and "HideOtherPanels" options. They can be enabled in beebeep.rc
- Added "UseEasyConnection" option to beebeep.rc
- Added "DisableFileTransfer" option in beebeep.rc
- Added "DisableSendMessage" option in beebeep.rc